[gd_scene load_steps=3 format=3 uid="uid://cax3ucwhacfxt"]

[ext_resource type="Script" uid="uid://btndgym6psfgy" path="res://scripts/bookpic.gd" id="1_uens3"]
[ext_resource type="Texture2D" uid="uid://w11nupesmmcc" path="res://assets/general assets/ui2/pushpin.png" id="2_uens3"]

[node name="Bookpic" type="TextureRect"]
script = ExtResource("1_uens3")

[node name="Pin" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_right = -15.0
offset_bottom = 31.0
grow_horizontal = 0
texture_normal = ExtResource("2_uens3")
ignore_texture_size = true
stretch_mode = 0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Pin" to="." method="_on_pin_pressed"]
